--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,71 +48,15 @@
 
     </RelativeLayout>
 
-
-    <androidx.core.widget.NestedScrollView
-        android:isScrollContainer="true"
-        android:measureAllChildren="true"
-        android:fillViewport="true"
-        android:layout_below="@+id/search_layout"
-        android:descendantFocusability="blocksDescendants"
+    <androidx.recyclerview.widget.RecyclerView
+        android:nestedScrollingEnabled="false"
+        android:layout_below="@id/search_layout"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/product_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/sliderLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="16dp"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toTopOf="@id/product_recyclerview"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.github.islamkhsh.CardSliderViewPager
-                    android:id="@+id/cardSlider"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:background="@color/background_color"
-                    app:auto_slide_time="4"
-                    app:cardSlider_baseShadow="2dp"
-                    app:cardSlider_indicator="@id/indicator2"
-                    app:cardSlider_minShadow="2dp"
-                    app:cardSlider_otherPagesWidth="24dp"
-                    app:cardSlider_pageMargin="0dp"
-                    app:cardSlider_smallScaleFactor="0.9" />
-
-                <com.github.islamkhsh.CardSliderIndicator
-                    android:id="@+id/indicator2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
-                    app:indicatorsToShow="5" />
-
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:nestedScrollingEnabled="false"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:id="@+id/product_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="800dp"
-                android:layout_below="@+id/sliderLayout"
-                android:layout_margin="4dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sliderLayout" />
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:layout_marginTop="16dp" />
 
 
 
