--- a/app/src/main/res/layout/adapter_product_header.xml
+++ b/app/src/main/res/layout/adapter_product_header.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
     android:orientation="vertical"
     android:layout_marginVertical="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
         <com.github.islamkhsh.CardSliderViewPager
             android:id="@+id/cardSlider"
