--- a/app/src/main/res/drawable/curved_stroke_search_bg.xml
+++ b/app/src/main/res/drawable/curved_stroke_search_bg.xml
@@ -3,8 +3,8 @@
 
 
     <stroke
-        android:width="2dp"
-        android:color="@color/colorAccent"/>
+        android:width="0.5dp"
+        android:color="@color/gray"/>
 
     <corners
         android:radius="8dp"/>
