--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,41 @@
     android:orientation="vertical">
 
 
+    <RelativeLayout
+        android:id="@+id/search_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/colorAccent">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/home_search_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:background="@drawable/curved_search_bg"
+            android:paddingRight="16dp"
+            app:drawableEndCompat="@drawable/ic_baseline_search_24"
+            app:drawableTint="@color/colorAccent" />
+
+    </RelativeLayout>
+
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/product_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/search_layout">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/product_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:visibility="gone"
         android:id="@+id/product_progressbar"
@@ -30,34 +65,6 @@
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:textSize="16sp" />
-    <RelativeLayout
-        android:id="@+id/search_layout"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/colorAccent">
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/home_search_tv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:background="@drawable/curved_search_bg"
-            android:paddingRight="16dp"
-            app:drawableEndCompat="@drawable/ic_baseline_search_24"
-            app:drawableTint="@color/colorAccent" />
-
-    </RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:nestedScrollingEnabled="false"
-        android:layout_below="@id/search_layout"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/product_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        android:layout_marginTop="16dp" />
-
 
 
 
