--- a/app/src/main/res/layout/fragment_slider.xml
+++ b/app/src/main/res/layout/fragment_slider.xml
@@ -1,31 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="vertical"
-    android:layout_marginVertical="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-        <com.github.islamkhsh.CardSliderViewPager
-            android:id="@+id/cardSlider"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:background="@color/background_color"
-            app:auto_slide_time="4"
-            app:cardSlider_baseShadow="2dp"
-            app:cardSlider_indicator="@id/indicator2"
-            app:cardSlider_minShadow="2dp"
-            app:cardSlider_otherPagesWidth="24dp"
-            app:cardSlider_pageMargin="0dp"
-            app:cardSlider_smallScaleFactor="0.9" />
+<!--        <com.github.islamkhsh.CardSliderViewPager-->
+<!--            android:id="@+id/cardSlider"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="240dp"-->
+<!--            android:background="@color/background_color"-->
+<!--            app:auto_slide_time="4"-->
+<!--            app:cardSlider_baseShadow="0dp"-->
+<!--            app:cardSlider_indicator="@id/indicator2"-->
+<!--            app:cardSlider_minShadow="0dp"-->
+<!--            app:cardSlider_otherPagesWidth="0dp"-->
+<!--            app:cardSlider_pageMargin="0dp"-->
+<!--            app:cardSlider_smallScaleFactor="1" />-->
 
-        <com.github.islamkhsh.CardSliderIndicator
-            android:id="@+id/indicator2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            app:indicatorsToShow="5" />
+<!--        <com.github.islamkhsh.CardSliderIndicator-->
+<!--            android:id="@+id/indicator2"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            app:indicatorsToShow="5" />-->
+
+
+
+        <com.afdhal_fa.imageslider.ImageSlider
+            android:visibility="gone"
+            android:id="@+id/imageSlider"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            app:iss_auto_cycle="false"
+            app:iss_delay="2000"
+            app:iss_period="3000"
+            app:iss_placeholder="@drawable/no_image"
+            app:iss_error_image="@drawable/no_image"
+            app:iss_image_scaleType="centerCrop"
+            app:iss_title_color="@color/white"
+            app:iss_with_title="true"
+            app:iss_with_background="true"
+            app:iss_title_gravity="left|bottom"
+            app:iss_title_background="@drawable/gradient" />
+
+
+       <include
+           android:layout_height="250dp"
+           android:layout_width="match_parent"
+               layout="@layout/layout_islider_image"/>
+
 
 
 </LinearLayout>
