--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,10 +12,32 @@
     <color name="lightGrayAlpha">#8DCFCFCF</color>
     <color name="lightGray">#B1B1B1</color>
     <color name="gray">#676666</color>
-    <color name="colorAccent">#060DD9</color>
-    <color name="colorSecondary">#d96f06</color>
-    <color name="background_color">#F3F3FF</color>
+<!--    <color name="colorAccent">#76A6F0</color>-->
+    <color name="colorAccent">#fa6b03</color>
+    <color name="colorSecondary">#1d1c1c</color>
+    <color name="background_color">#EBEAEF</color>
     <color name="background_color_on_item">#FFFFFF</color>
+    <color name="light_blue">#189BD6</color>
+
+
+
+
+
+<!--    pie chart color-->
+    <color name="color1">#2196F3</color>
+    <color name="color2">#E91E63</color>
+    <color name="color3">#F44336</color>
+    <color name="color4">#9C27B0</color>
+    <color name="color5">#009688</color>
+    <color name="color6">#00BCD4</color>
+    <color name="color7">#4CAF50</color>
+    <color name="color8">#FF9800</color>
+    <color name="color9">#3F51B5</color>
+
+
+
+
+
 
 
 </resources>
