--- a/app/src/main/res/layout/container_fragment_slider.xml
+++ b/app/src/main/res/layout/container_fragment_slider.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.fragment.app.FragmentContainerView
     android:id="@+id/fragment_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-</FrameLayout>
+</androidx.fragment.app.FragmentContainerView>
