--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,7 @@
     <RelativeLayout
         android:id="@+id/search_layout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/colorAccent">
+        android:layout_height="70dp">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/home_search_tv"
@@ -23,7 +22,13 @@
             android:background="@drawable/curved_search_bg"
             android:paddingRight="16dp"
             app:drawableEndCompat="@drawable/ic_baseline_search_24"
-            app:drawableTint="@color/colorAccent" />
+            app:drawableTint="@color/colorSecondary"
+            android:text="Nima izlayapsiz"
+            android:gravity="center_vertical"
+            android:paddingStart="12dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorSecondary"
+            />
 
     </RelativeLayout>
 
@@ -44,14 +49,16 @@
 
 
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
+    <ProgressBar
         android:visibility="gone"
         android:id="@+id/product_progressbar"
-        style="@style/Widget.MaterialComponents.CircularProgressIndicator.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="?android:progressBarStyle"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_centerInParent="true"
         android:indeterminate="true"
+        android:indeterminateTintMode="multiply"
+        android:indeterminateTint="@color/colorAccent"
         app:indicatorColor="@color/colorAccent"
         app:trackCornerRadius="16dp" />
 
