--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:background="@color/background_color"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -9,85 +10,24 @@
     <include
         layout="@layout/custom_toolbar"/>
 
-    <LinearLayout
-        android:padding="16dp"
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:text="@string/telefon_raqamingiz"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="14sp"/>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            app:elevation="2dp"
-            app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp"
-            app:boxBackgroundColor="@color/background_color"
-            app:boxStrokeColor="@android:color/transparent"
-            android:layout_marginTop="8dp"
-            android:layout_below="@id/text"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp"
-            android:id="@+id/phone_input_phone_container"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.github.pinball83.maskededittext.MaskedEditText
-                android:id="@+id/phone_input_phone_edittext"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:mask="+998 ** *** ** **"
-                app:notMaskedSymbol="*" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/login_btn_takecode"
-            app:backgroundTint="@color/colorAccent"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="@string/kodni_olish"
-            android:textAllCaps="false"
-            android:layout_marginTop="16dp"
-            app:cornerRadius="8dp"/>
-
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:visibility="gone"
-            android:id="@+id/code_layout"
+            android:background="@drawable/layout_stroke"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="24dp"
+            android:layout_margin="16dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:layout_height="match_parent">
             <TextView
-                android:gravity="center_horizontal"
-                android:id="@+id/phone_input_timer"
-                android:layout_marginTop="24dp"
-                android:text="00:59"
+                android:text="@string/telefon_raqamingiz"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/phone_input_code_info_tv"
-                android:layout_marginTop="8dp"
-                android:text="Tasdiqlash kodi ushbu raqamga yuborildi\n +998991234567"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/lightGray"
                 android:textSize="14sp"/>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 app:elevation="2dp"
@@ -97,84 +37,158 @@
                 app:boxStrokeColor="@android:color/transparent"
                 android:layout_marginTop="8dp"
                 android:layout_below="@id/text"
-                android:hint="@string/tasdiqlash_kodini_kiriting"
                 app:boxCornerRadiusTopStart="8dp"
                 app:boxCornerRadiusTopEnd="8dp"
                 app:boxCornerRadiusBottomStart="8dp"
                 app:boxCornerRadiusBottomEnd="8dp"
-                android:id="@+id/phone_input_code_container"
+                android:id="@+id/phone_input_phone_container"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <com.google.android.material.textfield.TextInputEditText
+
+                <com.github.pinball83.maskededittext.MaskedEditText
+                    android:id="@+id/phone_input_phone_edittext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/phone_input_code_et"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:maxLength="6"
+                    android:inputType="number"
+                    android:textColor="@drawable/text_color_enable_disable"
                     android:textSize="16sp"
-                    android:textColor="@color/black"/>
-
+                    android:textStyle="bold"
+                    app:mask="+998 ** *** ** **"
+                    app:notMaskedSymbol="*" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/login_btn_takecode"
+                app:backgroundTint="@color/light_blue"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="@string/kodni_olish"
+                android:textAllCaps="false"
+                android:layout_marginTop="16dp"
+                app:cornerRadius="8dp"/>
+
             <LinearLayout
-                android:layout_marginTop="12dp"
+                android:visibility="gone"
+                android:id="@+id/code_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/phone_input_change_phone_tv"
-                    android:text="@string/raqamni_o_zgartitirsh"
-                    android:layout_width="0dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"/>
-                <TextView
+                android:orientation="vertical">
 
-                    android:gravity="right"
-                    android:id="@+id/phone_input_code_notreceived_tv"
-                    android:text="@string/kodni_qayta_so_rash"
-                    android:layout_width="0dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_weight="1"
+                <TextView
+                    android:gravity="center_horizontal"
+                    android:id="@+id/phone_input_timer"
+                    android:layout_marginTop="24dp"
+                    android:text="01:59"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    />
+
+                <TextView
+                    android:id="@+id/phone_input_code_info_tv"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/tasdiqlash_kodi_ushbu_raqamga_yuborildi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    app:elevation="2dp"
+                    app:boxStrokeWidth="0dp"
+                    app:hintEnabled="false"
+                    app:boxStrokeWidthFocused="0dp"
+                    app:boxBackgroundColor="@color/background_color"
+                    app:boxStrokeColor="@android:color/transparent"
+                    android:layout_marginTop="8dp"
+                    android:layout_below="@id/text"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
+                    android:id="@+id/phone_input_code_container"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/phone_input_code_et"
+                        android:inputType="numberDecimal"
+                        android:maxLines="1"
+                        android:textStyle="bold"
+                        android:textColorHint="@color/colorSecondary"
+                        android:maxLength="6"
+                        android:hint="@string/tasdiqlash_kodini_kiriting"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorSecondary"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="12dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:visibility="gone"
+                        android:id="@+id/phone_input_change_phone_tv"
+                        android:text="@string/raqamni_o_zgartitirsh"
+                        android:layout_width="0dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/light_blue"
+                        android:textSize="14sp"/>
+                    <TextView
+                        android:visibility="gone"
+                        android:gravity="right"
+                        android:id="@+id/phone_input_code_notreceived_tv"
+                        android:text="@string/kodni_qayta_so_rash"
+                        android:layout_width="0dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/light_blue"
+                        android:textSize="14sp"/>
+                </LinearLayout>
+
+
+
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/login_btn_confirm"
+                    app:backgroundTint="@color/colorAccent"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:text="@string/tasdiqlash"
+                    android:textAllCaps="false"
+                    android:layout_marginTop="24dp"
+                    app:cornerRadius="8dp"/>
+
             </LinearLayout>
 
 
 
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/login_btn_confirm"
-                app:backgroundTint="@color/colorAccent"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="@string/tasdiqlash"
-                android:textAllCaps="false"
-                android:layout_marginTop="16dp"
-                app:cornerRadius="8dp"/>
+
+
+
+
+
+
+
+
+
+
 
         </LinearLayout>
+    </ScrollView>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </LinearLayout>
 
 
 
