--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -100,9 +100,9 @@
             <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                 android:id="@+id/elegantNumber"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 app:backGroundColor="@color/colorAccent"
-                app:textSize="8sp"
+                app:textSize="6sp"
                 app:initialNumber="1"
                 android:layout_gravity="right"
                 android:layout_marginHorizontal="12dp"
