--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -63,14 +63,68 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="uz.techie.mahsulot.ui.fragments.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:popUpTo="@id/registerFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_cabinetFragment"
+            app:destination="@id/cabinetFragment"
+            app:popUpTo="@id/cabinetFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/cabinetFragment"
         android:name="uz.techie.mahsulot.ui.fragments.CabinetFragment"
-        android:label="CabinetFragment" />
+        android:label="CabinetFragment" >
+        <action
+            android:id="@+id/action_cabinetFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_cabinetFragment_to_productStreamFragment"
+            app:destination="@id/productStreamFragment" />
+        <action
+            android:id="@+id/action_cabinetFragment_to_streamFragment"
+            app:destination="@id/streamFragment" />
+    </fragment>
     <action android:id="@+id/action_global_loginFragment" app:destination="@id/loginFragment" />
     <fragment
         android:id="@+id/topProductFragment"
         android:name="uz.techie.mahsulot.ui.fragments.TopProductFragment"
         android:label="TopProductFragment" />
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="uz.techie.mahsulot.ui.fragments.RegisterFragment"
+        android:label="RegisterFragment" >
+        <action
+            android:id="@+id/action_registerFragment_to_cabinetFragment"
+            app:destination="@id/cabinetFragment"
+            app:popUpTo="@id/cabinetFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="phone"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="uz.techie.mahsulot.ui.fragments.ProfileFragment"
+        android:label="ProfileFragment" />
+    <fragment
+        android:id="@+id/productStreamFragment"
+        android:name="uz.techie.mahsulot.ui.fragments.ProductStreamFragment"
+        android:label="ProductStreamFragment" />
+    <fragment
+        android:id="@+id/searchStreamFragment"
+        android:name="uz.techie.mahsulot.ui.fragments.SearchStreamFragment"
+        android:label="SearchStreamFragment" >
+        <argument
+            android:name="searchType"
+            app:argType="integer" />
+    </fragment><action android:id="@+id/action_global_searchStreamFragment" app:destination="@id/searchStreamFragment"/>
+    <fragment
+        android:id="@+id/streamFragment"
+        android:name="uz.techie.mahsulot.ui.fragments.StreamFragment"
+        android:label="StreamFragment" />
 </navigation>
