--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -10,4 +10,9 @@
         <item name="android:calendarViewShown">false</item>
     </style>
 
+    <style name="tableTextStyle">
+        <item name="android:textColor">@color/colorSecondary</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
