--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -30,4 +30,14 @@
         android:layout_centerInParent="true"
         android:visibility="gone"/>
 
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/stream_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="@color/colorSecondary"
+        android:layout_centerInParent="true"
+        android:layout_margin="16dp"/>
+
 </RelativeLayout>
