--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -39,7 +39,6 @@
                 app:iss_title_background="@drawable/gradient" />
 
             <include
-                android:layout_marginTop="12dp"
                 android:layout_height="400dp"
                 android:layout_width="match_parent"
                 layout="@layout/layout_islider_image"/>
@@ -159,18 +158,17 @@
     </ScrollView>
 
 
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/details_buy_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:cornerRadius="0dp"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/button_bg"
         android:text="@string/harid_qilish"
-        android:textColor="@drawable/button_text_color"
         android:textAllCaps="false"
+        android:textColor="@drawable/button_text_color"
         android:textSize="16sp"
-        android:layout_alignParentBottom="true" />
+        app:cornerRadius="0dp" />
 
 
 
